<resources>
    <string name="app_name">Event Manager</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_register">You have no account? Register here</string>
    <string name="email">Email</string>
    <string name="cellphone">Phone number</string>
    <string name="click_login">Do you have an account? Login here</string>
    <string name="scan_code">Scan QR Code</string>
    <string name="logout">Logout</string>
    <string name="booked_list">Saved events</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="price">Price:</string>
    <string name="free">Free</string>
    <string name="availability">Availability:</string>
    <string name="no_limits">No limits</string>
    <string name="qr_code">QR code of the event</string>
    <string name="name">Name</string>
    <string name="user_inital">U</string>
    <string name="share">Share</string>
    <string name="empty_list">List is empty!</string>
    <string name="bought">Bought!</string>
    <string name="sold_out">Sold out!</string>
    <string name="booked">Booked!</string>
    <string name="back">Back</string>
    <string name="all_events">All the events</string>
    <string name="tickets">Your tickets</string>
    <string name="acc_icon">Account icon</string>
    <string name="search_user">Search by User name</string>
    <string name="user_organizer">This user is an organizer</string>
    <string name="show_sales">Show sales</string>
    <string name="edit">Edit</string>
    <string name="seat">Seat: #</string>
    <string name="warning">!! WARNING !!</string>
    <string name="delete_info">Are you sure that you want to delete this profile?\nYou won\'t be able to use or activate it again and all the infos about your profile will be deleted permanently!</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="curr_password">Current password</string>
    <string name="new_pw1">New password</string>
    <string name="new_pw2">Repeat new password</string>
    <string name="passed_event">Passed!</string>
    <string name="your_event">It\'s your event!</string>
</resources>