<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#123456"
    tools:context=".EventListUser">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:padding="5dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back"
        android:background="@drawable/back_button" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/back"
        android:background="@drawable/neg_button"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/user"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/usr_button"
        android:text="@string/user_inital"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_btn"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/booked_list"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_above="@+id/cartButton"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_list" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/all_events"
        app:srcCompat="@drawable/list_event"
        android:layout_above="@+id/cartButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:tint="@color/black"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/scan_code"
        app:srcCompat="@drawable/qr_code_scanner"
        android:layout_above="@+id/cartButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/cartButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/tickets"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/shopping_cart"
        android:background="@color/secondary" />

</RelativeLayout>