<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/currPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/curr_password"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/newPw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currPw"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/new_pw1"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/newPw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPw1"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/new_pw2"
        android:textSize="22sp" />

</RelativeLayout>