<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#123456"
    tools:context=".EventListAdmin">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:padding="5dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back"
        android:background="@drawable/back_button" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/back"
        android:background="@drawable/neg_button"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/user"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/usr_button"
        android:text="@string/user_inital"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_btn"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:padding="10dp"
        android:hint="@string/search_user"
        android:textSize="18sp"
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_input"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_list" />

</RelativeLayout>