<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    tools:context=".EventBooking">

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/neg_button"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/user"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_inital"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_btn"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/location"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/location" />

    <RelativeLayout
        android:id="@+id/date_timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/date"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:padding="7dp"
            android:gravity="start|center_vertical"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="#CCCCCC"
            app:drawableStartCompat="@drawable/date" />

        <TextView
            android:id="@+id/time"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="15dp"
            android:gravity="end|center_vertical"
            android:padding="7dp"
            android:text="@string/time"
            android:textColor="#CCCCCC"
            android:textSize="15sp"
            app:drawableEndCompat="@drawable/time" />
    </RelativeLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_timeLayout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="15dp"
        android:layout_above="@+id/save_share"
        android:padding="15dp"
        android:paddingHorizontal="50dp"
        android:gravity="center"
        android:text="@string/free"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/shopping_cart"
        android:background="#FA20BD" />

    <RelativeLayout
        android:id="@+id/save_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" >

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/share"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary"
            android:src="@drawable/bookmark_empty"
            android:scaleType="center"
            android:contentDescription="Save" />

        <Button
            android:id="@+id/share"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="70dp"
            android:gravity="center"
            android:text="@string/share"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/share"
            android:background="@color/primary" />

    </RelativeLayout>

</RelativeLayout>