<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#123456"
    tools:context=".UserProfile">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:padding="5dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back"
        android:background="@drawable/back_button" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/back"
        android:background="@drawable/neg_button"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/user"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/usr_button"
        android:text="@string/user_inital"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_btn"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/username"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp" >

        <TextView
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="italic"
            android:gravity="center" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/e"
            android:text="@string/email"
            android:textSize="30sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_below="@+id/email"
            android:text="@string/cellphone"
            android:textSize="15sp"
            android:textStyle="italic"
            android:gravity="center" />

        <TextView
            android:id="@id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/p"
            android:text="@string/cellphone"
            android:textSize="30sp"
            android:gravity="center" />

    </RelativeLayout>

    <TextView
        android:id="@+id/organizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/edit_btn"
        android:text="@string/user_organizer"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_btn"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:padding="25dp"
        android:text="@string/edit"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/edit"
        android:background="@color/secondary"/>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="30dp"
        android:padding="25dp"
        android:text="Delete profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/delete"
        android:background="@color/negative" />

</RelativeLayout>