<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#123456"
    tools:context=".QrScanner">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:padding="5dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back"
        android:background="@drawable/back_button" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/back"
        android:background="@drawable/neg_button"
        android:padding="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/user"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/usr_button"
        android:text="@string/user_inital"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scan_btn"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Update image"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/scan_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/evt_list"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="50dp"
        android:paddingHorizontal="18dp"
        android:paddingVertical="70dp"
        android:text="@string/scan_code"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button" />

    <Button
        android:id="@+id/evt_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="70dp"
        android:text="@string/booked_list"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:drawableStart="@drawable/bookmark_full"
        android:drawableTint="@color/white"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary" />

</RelativeLayout>